# django-on-heroku

./: Pipfile  Procfile  manage.py  pyproject.toml  settings.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
features/: headless_chrome.feature
features/steps/: headless_chrome.py
